# TheThing4

./: .dockerignore  .gitignore  AGENTS.md  AI_GUIDE.md  BACKLOG_VISION.md  CONTRIBUTING.md  MEMORY_SPEC.md  PROJECT_CONTEXT.md  README.md  SETUP.md  WORKFLOW.md  adrian.txt  build.gradle.kts  encryption_public_key.pem  gradle.properties  settings.gradle.kts  start.md  test.csr
.githooks/: pre-commit
agents/: README.md  dashboard.md  memory.json  status.json  status.md
app/: build.gradle.kts  proguard-rules.pro
artifacts/: context_MORPHO-008-autosort.json
backlog/: backlog.json  board.json
docs/: TODO-agent-reorg.md  ai-first-development-roi-20251026.md  ai-first-development-roi-20251029.md  ai-first-development-roi.md  install-checklist.md  process-improvement-suggestions-20251026.md
evidence/: validator-logs-2025-11-22-poi213-resolved.txt
memory/: echo.json  orin.json  scribe.json
notes/: README.md  cosv1.0.txt  restart-brief.md  session-quick-brief-20251026.md
proto/: validator.proto
reports/: chronicle.md
scripts/: README.md  archive_legacy.py  board.py  build_poi_android.sh  check_hygiene.py  context.py  generate_qr.py  grep_logcat.py  hooks_precommit.py  log_add.py  memory_sync.py  pdca_edit.py  scaffold_task.py  scaffold_topic.py  session_start_hook.ps1  set_in_progress.py  set_in_progress_board.py  setup_hooks.ps1  skin_tokens_sync.py  update_backlog_index.py  validate-agent-sync.ps1  (+3 more)
validator/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
validator/softhsm/: Dockerfile
validator/src/: main.rs  play_integrity.rs  service.rs
(+746 files in other folders)
