[package]
name = "poi-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
