[package]
name = "poi-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
p256 = { version = "0.13", features = ["pkcs8"] }
sha2 = "0.10"
thiserror = "1.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.19"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.1"

[features]
default = []
